# mdIngest

./: .gitignore  404.html  Cargo.toml  GEMINI.md  README.md  book.toml  cover.html  creative_workflow.md  googledocs_to_mdbook_plan.md  ingestion_layer_roadmap.md  print.html  roadmap.html  searcher-09f2665d.js  searchindex-011c1ac0.js  toc-0d24d02b.js  toc.html  workflow.html
.github/workflows/: deploy_docs.yml
api/doc/: crates.js  help.html  settings.html  src-files.js
api/doc/md_publish/: all.html  enum.Commands.html  fn.check_dependencies.html  fn.extract_html_from_zip.html  fn.ingest_image.html  fn.ingest_text.html  fn.ingest_video.html  fn.main.html  fn.run_doctor.html  fn.update_summary.html  index.html  sidebar-items.js  struct.BookToml.html  struct.Cli.html  struct.IngestConfig.html  struct.PreprocessorSection.html
api/doc/mdbook_ingest/: all.html  enum.Commands.html  fn.check_dependencies.html  fn.extract_html_from_zip.html  fn.ingest_image.html  fn.ingest_text.html  fn.ingest_video.html  fn.main.html  fn.run_doctor.html  fn.update_summary.html  index.html  struct.BookToml.html  struct.Cli.html  struct.IngestConfig.html  struct.PreprocessorSection.html
api/doc/search.index/: 0005054c6d.js  01abdc1e77.js  0653819c27.js  160966aa4039.js  298b63baf2ba.js  3578481097.js  372f98492e.js  (+13 more)
api/mdbook_ingest/: index.html
crate/src/: main.rs  sanitizer.rs
scripts/: README.md  fix_241_footnotes.py  fix_markdown.py  fix_pics.py  fix_vids.py
src/: 233.md  240.md  241.md  242.md  SUMMARY.md  cover.md  dev_log.md  main.rs  roadmap.md  sanitizer.rs  workflow.md
(+50 files in other folders)
