[package]
name = "mdbook-ingest"
version = "0.1.0"
authors = ["ashutosh"]
edition = "2021"
description = "A professional mdbook ingestion tool for Google Docs exports."

[dependencies]
mdbook = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
once_cell = "1.18"
zip = "0.6"
html2md = "0.2"
scraper = "0.27.0"
html-escape = "0.2"
